--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ a.source:visited {
   If you want to change the color, see options here: https://github.com/coryasilva/Leaflet.ExtraMarkers/blob/master/src/assets/css/leaflet.extra-markers.css
 */
 .marker-active {
-  background-position: -72px 0 !important;
+  border: 1px solid #eeeeee;
 }
 
 /* Storymap logo image above the title */
