--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,9 @@ a.source:visited {
 .marker-active {
   background-url: var(--bg-url);
   border-style: none;
+  -moz-box-shadow: 0 0 5px #fff;
+  -webkit-box-shadow: 0 0 5px #fff;
+  box-shadow: 0px 0px 5px #fff;
 }
 
 /* Storymap logo image above the title */
