--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ a.source:visited {
 .marker-active {
   background-url: var(--bg-url);
   border-style: none;
+  border: 0px solid transparent;
   -moz-box-shadow: 0 0 5px #fff;
   -webkit-box-shadow: 0 0 5px #fff;
   box-shadow: 0px 0px 5px #fff;
