--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,8 @@ a.source:visited {
   border-style: none;
   border: 0px solid transparent;
   filter: invert(44%) sepia(54%) saturate(899%) hue-rotate(233deg) brightness(93%) contrast(84%);
+  width:70px;
+  height:92px;
 }
 
 /* Storymap logo image above the title */
