--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ a.source:visited {
   border-style: none;
   border: 0px solid transparent;
   filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(137deg) brightness(105%) contrast(108%);
+  opacity: 1.0;
 }
 
 /* Storymap logo image above the title */
